# digital-company

./: .gitignore  README.md  pyproject.toml  setup.sh
docs/: architecture-v2.md  game-improvement-plan.md
src/: __init__.py  company.py  config.py
src/agents/: __init__.py  base.py  router.py
src/memory/: __init__.py  company_memory.py
src/workflows/: __init__.py  orchestrator.py
